--- a/Front-end/pages/admin/users.html
+++ b/Front-end/pages/admin/users.html
@@ -38,10 +38,6 @@
             <i class="bi bi-flag-fill"></i>
             <span>Reports</span>
           </a>
-          <a href="settings.html" class="menu-item">
-            <i class="bi bi-gear-fill"></i>
-            <span>Settings</span>
-          </a>
         </div>
       </nav>
 
@@ -56,19 +52,12 @@
             <h4>Users Management</h4>
           </div>
           <div class="topbar-right">
-            <div class="dropdown">
-              <button class="btn" data-bs-toggle="dropdown">
-                <img src="/assets/image/Profile-picture.png" alt="Admin" class="admin-avatar">
-                <span>Admin User</span>
-                <i class="bi bi-chevron-down"></i>
+            <a href="../timeline.html" class="text-decoration-none">
+              <button class="btn admin-back-btn">
+                <i class="fa-solid fa-arrow-left"></i>
+                <span>Back</span>
               </button>
-              <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" href="profile.html"><i class="bi bi-person"></i> Profile</a></li>
-                <li><a class="dropdown-item" href="settings.html"><i class="bi bi-gear"></i> Settings</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item text-danger" href="login.html"><i class="bi bi-box-arrow-right"></i> Logout</a></li>
-              </ul>
-            </div>
+            </a>
           </div>
         </div>
 
