--- a/Front-end/pages/notifications.html
+++ b/Front-end/pages/notifications.html
@@ -76,6 +76,9 @@
                 </div>
               </a>
               <hr class="my-1">
+              <a class="dropdown-item" href="admin/dashboard.html">
+                <i class="fa-solid fa-user-tie me-2"></i></i> Administration
+              </a>
               <a class="dropdown-item" href="settings.html">
                 <i class="bi bi-gear-fill me-2"></i> Settings & Privacy
               </a>
