--- a/Front-end/pages/register.html
+++ b/Front-end/pages/register.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/assets/css/common.css">
   </head>
   <body>
+  <div class="toast-container"></div>
     <div class="auth-container">
       <div class="auth-card">
         <div class="auth-header">
