--- a/Front-end/pages/login.html
+++ b/Front-end/pages/login.html
@@ -43,7 +43,7 @@
             <a href="forgot-password.html" class="forgot-password">Forgot password?</a>
           </div>
 
-          <button type="submit" class="btn btn-primary w-100 mb-3" onclick="window.location.href='timeline.html';">Sign In</button>
+          <button type="submit" class="btn btn-primary w-100 mb-3">Sign In</button>
 
           <div class="divider">
             <span>or continue with</span>
@@ -68,6 +68,7 @@
             Need an admin account? <a href="admin/register.html">Request access</a>
           </p>
         </form>
+        <div class="toast-container"></div>
       </div>
     </div>
 
