--- a/Front-end/pages/login.html
+++ b/Front-end/pages/login.html
@@ -68,13 +68,13 @@
             Need an admin account? <a href="admin/register.html">Request access</a>
           </p>
         </form>
-        <div class="toast-container"></div>
       </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/assets/js/auth.js"></script>
   </body>
 </html>
