--- a/Front-end/pages/register.html
+++ b/Front-end/pages/register.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="/assets/css/common.css">
   </head>
   <body>
-  <div class="toast-container"></div>
     <div class="auth-container">
       <div class="auth-card">
         <div class="auth-header">
@@ -96,6 +95,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/assets/js/auth.js"></script>
   </body>
 </html>
