Forgot Password Completed

--- a/Front-end/pages/login.html
+++ b/Front-end/pages/login.html
@@ -45,21 +45,21 @@
 
           <button type="submit" class="btn btn-primary w-100 mb-3">Sign In</button>
 
-          <div class="divider">
-            <span>or continue with</span>
-          </div>
+<!--          <div class="divider">-->
+<!--            <span>or continue with</span>-->
+<!--          </div>-->
 
-          <div class="social-login">
-            <button type="button" class="btn btn-outline-light social-btn">
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/google/google-original.svg" alt="Google">
-            </button>
-            <button type="button" class="btn btn-outline-light social-btn">
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/facebook/facebook-original.svg" alt="Facebook">
-            </button>
-            <button type="button" class="btn btn-outline-light social-btn">
-              <i class="fab fa-apple"></i>
-            </button>
-          </div>
+<!--          <div class="social-login">-->
+<!--            <button type="button" class="btn btn-outline-light social-btn">-->
+<!--              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/google/google-original.svg" alt="Google">-->
+<!--            </button>-->
+<!--            <button type="button" class="btn btn-outline-light social-btn">-->
+<!--              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/facebook/facebook-original.svg" alt="Facebook">-->
+<!--            </button>-->
+<!--            <button type="button" class="btn btn-outline-light social-btn">-->
+<!--              <i class="fab fa-apple"></i>-->
+<!--            </button>-->
+<!--          </div>-->
 
           <p class="text-center mt-4">
             Don't have an account? <a href="register.html">Sign up</a>
