--- a/Front-end/pages/forgot-password.html
+++ b/Front-end/pages/forgot-password.html
@@ -155,28 +155,38 @@
               </button>
             </div>
 
-            <div class="password-requirements mb-4">
-              <div class="requirement" data-requirement="length">
-                <i class="fas fa-times-circle"></i>
-                <span>At least 8 characters</span>
+            <div class="password-strength mb-3">
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-              <div class="requirement" data-requirement="uppercase">
-                <i class="fas fa-times-circle"></i>
-                <span>One uppercase letter</span>
-              </div>
-              <div class="requirement" data-requirement="lowercase">
-                <i class="fas fa-times-circle"></i>
-                <span>One lowercase letter</span>
-              </div>
-              <div class="requirement" data-requirement="number">
-                <i class="fas fa-times-circle"></i>
-                <span>One number</span>
-              </div>
-              <div class="requirement" data-requirement="special">
-                <i class="fas fa-times-circle"></i>
-                <span>One special character</span>
+              <div class="strength-text">
+                <span>Password strength:</span>
+                <span id="strengthText">weak</span>
               </div>
             </div>
+
+<!--            <div class="password-requirements mb-4">-->
+<!--              <div class="requirement" data-requirement="length">-->
+<!--                <i class="fas fa-times-circle"></i>-->
+<!--                <span>At least 8 characters</span>-->
+<!--              </div>-->
+<!--              <div class="requirement" data-requirement="uppercase">-->
+<!--                <i class="fas fa-times-circle"></i>-->
+<!--                <span>One uppercase letter</span>-->
+<!--              </div>-->
+<!--              <div class="requirement" data-requirement="lowercase">-->
+<!--                <i class="fas fa-times-circle"></i>-->
+<!--                <span>One lowercase letter</span>-->
+<!--              </div>-->
+<!--              <div class="requirement" data-requirement="number">-->
+<!--                <i class="fas fa-times-circle"></i>-->
+<!--                <span>One number</span>-->
+<!--              </div>-->
+<!--              <div class="requirement" data-requirement="special">-->
+<!--                <i class="fas fa-times-circle"></i>-->
+<!--                <span>One special character</span>-->
+<!--              </div>-->
+<!--            </div>-->
 
             <button type="button" class="btn btn-primary w-100 mb-4" id="resetPasswordBtn">Reset Password</button>
           </div>
