Adming Acceess Form Completed

--- a/Front-end/pages/profile.html
+++ b/Front-end/pages/profile.html
@@ -17,10 +17,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="icon" href="/assets/image/Luma-logo.jpeg" />
-    <link rel="stylesheet" href="/assets/css/profile.css" />
-    <link rel="stylesheet" href="/assets/css/timeline.css" />
-    <link rel="stylesheet" href="/assets/css/common.css" />
+    <link rel="icon" href="../assets/image/Luma-logo.jpeg" />
+    <link rel="stylesheet" href="../assets/css/profile.css" />
+    <link rel="stylesheet" href="../assets/css/timeline.css" />
+    <link rel="stylesheet" href="../assets/css/common.css" />
   </head>
   <body>
     <div id="app">
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
           <div class="container-fluid">
             <a class="navbar-brand" href="/">
-              <img src="/assets/image/Luma-logo.jpeg" alt="Luma Logo" />
+              <img src="../assets/image/Luma-logo.jpeg" alt="Luma Logo" />
             </a>
             <div class="search-container">
               <i class="bi bi-search search-icon"></i>
@@ -93,7 +93,7 @@
                 title="Profile"
               >
                 <img
-                  src="/assets/image/Profile-picture.png"
+                  src="../assets/image/Profile-picture.png"
                   alt="Profile"
                   class="profile-img"
                 />
@@ -108,7 +108,7 @@
                 <a href="profile.html">
                   <div class="d-flex align-items-center px-3 py-2">
                     <img
-                      src="/assets/image/Profile-picture.png"
+                      src="../assets/image/Profile-picture.png"
                       alt="Profile"
                       class="rounded-circle me-2"
                       width="40"
@@ -164,7 +164,7 @@
                   <div class="profile-header">
                     <div class="profile-picture-container">
                       <img
-                        src="/assets/image/Profile-picture.png"
+                        src="../assets/image/Profile-picture.png"
                         alt="Profile Picture"
                         class="profile-picture"
                         id="profileImage"
@@ -335,7 +335,7 @@
                               class="d-flex align-items-center timline-post-item"
                             >
                               <img
-                                src="/assets/image/Profile-picture.png"
+                                src="../assets/image/Profile-picture.png"
                                 alt="Profile"
                                 class="rounded-circle me-2"
                               />
@@ -360,7 +360,7 @@
                               and clients. #Innovation #Technology
                             </p>
                             <img
-                              src="/assets/image/Test-image.jpg"
+                              src="../assets/image/Test-image.jpg"
                               alt="Post image"
                               class="img-fluid rounded mb-3"
                             />
@@ -482,7 +482,7 @@
                           <div class="friends-grid">
                             <div class="friend-item">
                               <img
-                                src="/assets/image/Test-profile-img.jpg"
+                                src="../assets/image/Test-profile-img.jpg"
                                 alt="Friend"
                                 class="rounded-circle"
                               />
@@ -490,7 +490,7 @@
                             </div>
                             <div class="friend-item">
                               <img
-                                src="/assets/image/Test-profile-img.jpg"
+                                src="../assets/image/Test-profile-img.jpg"
                                 alt="Friend"
                                 class="rounded-circle"
                               />
@@ -498,7 +498,7 @@
                             </div>
                             <div class="friend-item">
                               <img
-                                src="/assets/image/Test-profile-img.jpg"
+                                src="../assets/image/Test-profile-img.jpg"
                                 alt="Friend"
                                 class="rounded-circle"
                               />
@@ -610,7 +610,7 @@
                       <div class="col-md-3">
                         <div class="friend-card">
                           <img
-                            src="/assets/image/Test-profile-img.jpg"
+                            src="../assets/image/Test-profile-img.jpg"
                             alt="Friend"
                             class="friend-image"
                           />
@@ -692,7 +692,7 @@
             <!-- Author Section -->
             <div class="d-flex align-items-center mb-4 timline-post-item">
               <img
-                src="/assets/image/Profile-picture.png"
+                src="../assets/image/Profile-picture.png"
                 alt="Profile"
                 class="rounded-circle me-3 profile-img-lg"
               />
@@ -887,6 +887,6 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/profile.js"></script>
+    <script src="../assets/js/profile.js"></script>
   </body>
 </html>
