--- a/Front-end/pages/timeline.html
+++ b/Front-end/pages/timeline.html
@@ -17,9 +17,9 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="icon" href="/assets/image/Luma-logo.jpeg"/>
-    <link rel="stylesheet" href="/assets/css/timeline.css"/>
-    <link rel="stylesheet" href="/assets/css/common.css"/>
+    <link rel="icon" href="../assets/image/Luma-logo.jpeg"/>
+    <link rel="stylesheet" href="../assets/css/timeline.css"/>
+    <link rel="stylesheet" href="../assets/css/common.css"/>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
-                    <img src="/assets/image/Luma-logo.jpeg" alt="Luma Logo"/>
+                    <img src="../assets/image/Luma-logo.jpeg" alt="Luma Logo"/>
                 </a>
                 <div class="search-container">
                     <i class="bi bi-search search-icon"></i>
@@ -109,7 +109,7 @@
                             title="Profile"
                     >
                         <img
-                                src="/assets/image/Profile-picture.png"
+                                src="../assets/image/Profile-picture.png"
                                 alt="Profile"
                                 class="profile-img"
                         />
@@ -124,7 +124,7 @@
                         <a href="profile.html">
                             <div class="d-flex align-items-center px-3 py-2">
                                 <img
-                                        src="/assets/image/Profile-picture.png"
+                                        src="../assets/image/Profile-picture.png"
                                         alt="Profile"
                                         class="rounded-circle me-2"
                                         width="40"
@@ -160,7 +160,7 @@
                         <div class="card-body text-center position-relative">
                             <div class="profile-photo">
                                 <img
-                                        src="/assets/image/Profile-picture.png"
+                                        src="../assets/image/Profile-picture.png"
                                         alt="Dilsara Thiranjaya"
                                         class="rounded-circle border border-3 border-white"
                                 />
@@ -193,11 +193,11 @@
                                 <h6 class="text-muted mb-3">Play Games</h6>
                                 <div class="shortcut-item d-flex align-items-center mb-2">
                                     <a
-                                            href="/games/speed-shifters-2d.html"
+                                            href="../games/speed-shifters-2d.html"
                                             class="text-decoration-none text-black"
                                     >
                                         <img
-                                                src="/assets/image/Speed-shifters-logo.png"
+                                                src="../assets/image/Speed-shifters-logo.png"
                                                 alt="Game"
                                                 class="rounded me-2"
                                         />
@@ -246,7 +246,7 @@
                             <div class="card-header bg-transparent">
                                 <div class="d-flex align-items-center timline-post-item">
                                     <img
-                                            src="/assets/image/Test-profile-img.jpg"
+                                            src="../assets/image/Test-profile-img.jpg"
                                             alt="Profile"
                                             class="rounded-circle me-2"
                                     />
@@ -271,7 +271,7 @@
                                     #Innovation #Technology
                                 </p>
                                 <img
-                                        src="/assets/image/Test-image.jpg"
+                                        src="../assets/image/Test-image.jpg"
                                         alt="Post image"
                                         class="img-fluid rounded mb-3"
                                 />
@@ -324,7 +324,7 @@
                                     >
                                         <div class="d-flex align-items-center shortcut-item">
                                             <img
-                                                    src="/assets/image/Test-profile-img.jpg"
+                                                    src="../assets/image/Test-profile-img.jpg"
                                                     alt="Profile"
                                                     class="rounded-circle me-2"
                                             />
@@ -342,7 +342,7 @@
                                     >
                                         <div class="d-flex align-items-center shortcut-item">
                                             <img
-                                                    src="/assets/image/Test-profile-img.jpg"
+                                                    src="../assets/image/Test-profile-img.jpg"
                                                     alt="Profile"
                                                     class="rounded-circle me-2"
                                             />
@@ -360,7 +360,7 @@
                                     >
                                         <div class="d-flex align-items-center shortcut-item">
                                             <img
-                                                    src="/assets/image/Test-profile-img.jpg"
+                                                    src="../assets/image/Test-profile-img.jpg"
                                                     alt="Profile"
                                                     class="rounded-circle me-2"
                                             />
@@ -387,7 +387,7 @@
                                     >
                                         <div class="d-flex align-items-center shortcut-item">
                                             <img
-                                                    src="/assets/image/Test-profile-img.jpg"
+                                                    src="../assets/image/Test-profile-img.jpg"
                                                     alt="Group"
                                                     class="rounded-circle me-2"
                                             />
@@ -405,7 +405,7 @@
                                     >
                                         <div class="d-flex align-items-center shortcut-item">
                                             <img
-                                                    src="/assets/image/Test-profile-img.jpg"
+                                                    src="../assets/image/Test-profile-img.jpg"
                                                     alt="Group"
                                                     class="rounded-circle me-2"
                                             />
@@ -423,7 +423,7 @@
                                     >
                                         <div class="d-flex align-items-center shortcut-item">
                                             <img
-                                                    src="/assets/image/Test-profile-img.jpg"
+                                                    src="../assets/image/Test-profile-img.jpg"
                                                     alt="Group"
                                                     class="rounded-circle me-2"
                                             />
@@ -470,7 +470,7 @@
                 <!-- Author Section -->
                 <div class="d-flex align-items-center mb-4 timline-post-item">
                     <img
-                            src="/assets/image/Profile-picture.png"
+                            src="../assets/image/Profile-picture.png"
                             alt="Profile"
                             class="rounded-circle me-3 profile-img-lg"
                     />
@@ -667,6 +667,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="/assets/js/timeline.js"></script>
+<script src="../assets/js/timeline.js"></script>
 </body>
 </html>
