--- a/Front-end/pages/admin/admin-access.html
+++ b/Front-end/pages/admin/admin-access.html
@@ -8,43 +8,23 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link rel="icon" href="/assets/image/Luma-logo.jpeg" />
-    <link rel="stylesheet" href="/assets/css/auth.css">
-    <link rel="stylesheet" href="/assets/css/common.css">
+    <link rel="icon" href="../../assets/image/Luma-logo.jpeg" />
+    <link rel="stylesheet" href="../../assets/css/auth.css">
+    <link rel="stylesheet" href="../../assets/css/common.css">
   </head>
   <body>
     <div class="auth-container">
       <div class="auth-card">
         <div class="auth-header">
-          <img src="/assets/image/Luma-logo.jpeg" alt="Luma Logo" class="auth-logo">
+          <img src="../../assets/image/Luma-logo.jpeg" alt="Luma Logo" class="auth-logo">
           <h2>Request Admin Access</h2>
           <p>Submit your details for admin access</p>
         </div>
 
-        <form id="registerForm" class="auth-form">
-          <div class="row g-3 mb-3">
-            <div class="col-6">
-              <div class="form-floating">
-                <input type="text" class="form-control" id="firstName" placeholder="John" required>
-                <label for="firstName">First Name</label>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="form-floating">
-                <input type="text" class="form-control" id="lastName" placeholder="Doe" required>
-                <label for="lastName">Last Name</label>
-              </div>
-            </div>
-          </div>
-
+        <form id="adminAccessForm" class="auth-form">
           <div class="form-floating mb-3">
             <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
-            <label for="email">Work Email</label>
-          </div>
-
-          <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="position" placeholder="Position" required>
-            <label for="position">Position/Role</label>
+            <label for="email">Email</label>
           </div>
 
           <div class="form-floating mb-3">
@@ -72,6 +52,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/assets/js/auth.js"></script>
+    <script src="../../assets/js/auth.js"></script>
   </body>
 </html>
