--- a/Front-end/pages/admin/dashboard.html
+++ b/Front-end/pages/admin/dashboard.html
@@ -17,9 +17,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="icon" href="/assets/image/Luma-logo.jpeg" />
-    <link rel="stylesheet" href="/assets/css/admin/dashboard.css" />
-    <link rel="stylesheet" href="/assets/css/common.css" />
+    <link rel="icon" href="../../assets/image/Luma-logo.jpeg" />
+    <link rel="stylesheet" href="../../assets/css/admin/dashboard.css" />
+    <link rel="stylesheet" href="../../assets/css/common.css" />
   </head>
   <body>
     <div class="admin-container">
@@ -27,7 +27,7 @@
       <nav class="admin-sidebar">
         <div class="sidebar-header">
           <img
-            src="/assets/image/Luma-logo.jpeg"
+            src="../../assets/image/Luma-logo.jpeg"
             alt="Luma Logo"
             class="sidebar-logo"
           />
@@ -193,7 +193,7 @@
                     <div class="list-group-item">
                       <div class="d-flex align-items-center">
                         <img
-                          src="/assets/image/Test-profile-img.jpg"
+                          src="../../assets/image/Test-profile-img.jpg"
                           alt="User"
                           class="rounded-circle me-3"
                           width="40"
@@ -210,7 +210,7 @@
                     <div class="list-group-item">
                       <div class="d-flex align-items-center">
                         <img
-                          src="/assets/image/Test-profile-img.jpg"
+                          src="../../assets/image/Test-profile-img.jpg"
                           alt="User"
                           class="rounded-circle me-3"
                           width="40"
@@ -241,7 +241,7 @@
                     <div class="list-group-item">
                       <div class="d-flex align-items-center">
                         <img
-                          src="/assets/image/Test-profile-img.jpg"
+                          src="../../assets/image/Test-profile-img.jpg"
                           alt="User"
                           class="rounded-circle me-3"
                           width="40"
@@ -262,7 +262,7 @@
                     <div class="list-group-item">
                       <div class="d-flex align-items-center">
                         <img
-                          src="/assets/image/Test-profile-img.jpg"
+                          src="../../assets/image/Test-profile-img.jpg"
                           alt="User"
                           class="rounded-circle me-3"
                           width="40"
@@ -293,10 +293,10 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="/assets/js/admin/dashboard.js"></script>
+    <script src="../../assets/js/admin/dashboard.js"></script>
     <script>
       // Load modals
-      fetch("/assets/html/admin/modals.html")
+      fetch("../../assets/html/admin/modals.html")
         .then((response) => response.text())
         .then((html) => {
           document.getElementById("modalsContainer").innerHTML = html;
