--- a/Front-end/pages/admin/users.html
+++ b/Front-end/pages/admin/users.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link rel="icon" href="/assets/image/Luma-logo.jpeg" />
-    <link rel="stylesheet" href="/assets/css/admin/dashboard.css">
-    <link rel="stylesheet" href="/assets/css/common.css">
+    <link rel="icon" href="../../assets/image/Luma-logo.jpeg" />
+    <link rel="stylesheet" href="../../assets/css/admin/dashboard.css">
+    <link rel="stylesheet" href="../../assets/css/common.css">
   </head>
   <body>
     <div class="admin-container">
       <!-- Sidebar -->
       <nav class="admin-sidebar">
         <div class="sidebar-header">
-          <img src="/assets/image/Luma-logo.jpeg" alt="Luma Logo" class="sidebar-logo">
+          <img src="../../assets/image/Luma-logo.jpeg" alt="Luma Logo" class="sidebar-logo">
           <h5>Luma Admin</h5>
         </div>
         
@@ -108,7 +108,7 @@
                     <tr data-user-id="1">
                       <td>
                         <div class="d-flex align-items-center">
-                          <img src="/assets/image/Test-profile-img.jpg" alt="User" class="rounded-circle me-2" width="40">
+                          <img src="../../assets/image/Test-profile-img.jpg" alt="User" class="rounded-circle me-2" width="40">
                           <div>
                             <h6 class="mb-0">John Doe</h6>
                             <small class="text-muted">@johndoe</small>
@@ -133,7 +133,7 @@
                     <tr data-user-id="2">
                       <td>
                         <div class="d-flex align-items-center">
-                          <img src="/assets/image/Test-profile-img.jpg" alt="User" class="rounded-circle me-2" width="40">
+                          <img src="../../assets/image/Test-profile-img.jpg" alt="User" class="rounded-circle me-2" width="40">
                           <div>
                             <h6 class="mb-0">Jane Smith</h6>
                             <small class="text-muted">@janesmith</small>
@@ -170,10 +170,10 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/admin/dashboard.js"></script>
+    <script src="../../assets/js/admin/dashboard.js"></script>
     <script>
       // Load modals
-      fetch('/assets/html/admin/modals.html')
+      fetch('../../assets/html/admin/modals.html')
         .then(response => response.text())
         .then(html => {
           document.getElementById('modalsContainer').innerHTML = html;
