--- a/Front-end/pages/friends.html
+++ b/Front-end/pages/friends.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="icon" href="/assets/image/Luma-logo.jpeg">
-  <link rel="stylesheet" href="/assets/css/common.css">
-  <link rel="stylesheet" href="/assets/css/friends.css">
+  <link rel="icon" href="../assets/image/Luma-logo.jpeg">
+  <link rel="stylesheet" href="../assets/css/common.css">
+  <link rel="stylesheet" href="../assets/css/friends.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
-            <img src="/assets/image/Luma-logo.jpeg" alt="Luma Logo">
+            <img src="../assets/image/Luma-logo.jpeg" alt="Luma Logo">
           </a>
           <div class="search-container">
             <i class="bi bi-search search-icon"></i>
@@ -65,13 +65,13 @@
               </a>
             </div> -->
             <a class="nav-link profile-link" href="#" id="profileDropdown" data-bs-toggle="dropdown" title="Profile">
-              <img src="/assets/image/Profile-picture.png" alt="Profile" class="profile-img">
+              <img src="../assets/image/Profile-picture.png" alt="Profile" class="profile-img">
               <span id="profile-down-arrow"><i class="fa-solid fa-circle-chevron-down"></i></span>
             </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
               <a href="profile.html">
                 <div class="d-flex align-items-center px-3 py-2">
-                  <img src="/assets/image/Profile-picture.png" alt="Profile" class="rounded-circle me-2" width="40">
+                  <img src="../assets/image/Profile-picture.png" alt="Profile" class="rounded-circle me-2" width="40">
                   <div>
                     <h6 class="mb-0">Dilsara Thiranjaya</h6>
                   </div>
@@ -155,7 +155,7 @@
                       <!-- Friend Request Card -->
                       <div class="col-md-6 col-lg-4">
                         <div class="friend-request-card">
-                          <img src="/assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
+                          <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
                           <div class="friend-info">
                             <h6>John Smith</h6>
                             <p class="text-muted mb-2">12 mutual friends</p>
@@ -169,7 +169,7 @@
                       <!-- Repeat for other requests -->
                       <div class="col-md-6 col-lg-4">
                         <div class="friend-request-card">
-                          <img src="/assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
+                          <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
                           <div class="friend-info">
                             <h6>Sarah Johnson</h6>
                             <p class="text-muted mb-2">8 mutual friends</p>
@@ -182,7 +182,7 @@
                       </div>
                       <div class="col-md-6 col-lg-4">
                         <div class="friend-request-card">
-                          <img src="/assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
+                          <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
                           <div class="friend-info">
                             <h6>Mike Wilson</h6>
                             <p class="text-muted mb-2">15 mutual friends</p>
@@ -229,7 +229,7 @@
                       <!-- Friend Card -->
                       <div class="col-md-6 col-lg-4">
                         <div class="friend-card">
-                          <img src="/assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
+                          <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
                           <div class="friend-info">
                             <h6>Alex Turner</h6>
                             <p class="text-muted mb-2">Software Engineer at Facebook</p>
@@ -247,7 +247,7 @@
                       <!-- Repeat for other friends -->
                       <div class="col-md-6 col-lg-4">
                         <div class="friend-card">
-                          <img src="/assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
+                          <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
                           <div class="friend-info">
                             <h6>Emma Watson</h6>
                             <p class="text-muted mb-2">UX Designer at Amazon</p>
@@ -264,7 +264,7 @@
                       </div>
                       <div class="col-md-6 col-lg-4">
                         <div class="friend-card">
-                          <img src="/assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
+                          <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
                           <div class="friend-info">
                             <h6>James Miller</h6>
                             <p class="text-muted mb-2">Product Manager at Twitter</p>
@@ -314,7 +314,7 @@
                       <!-- Suggestion Card -->
                       <div class="col-md-6 col-lg-4">
                         <div class="friend-suggestion-card">
-                          <img src="/assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
+                          <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
                           <div class="friend-info">
                             <h6>Emily Brown</h6>
                             <p class="text-muted mb-2">Works at Google</p>
@@ -327,7 +327,7 @@
                       <!-- Repeat for other suggestions -->
                       <div class="col-md-6 col-lg-4">
                         <div class="friend-suggestion-card">
-                          <img src="/assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
+                          <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
                           <div class="friend-info">
                             <h6>David Lee</h6>
                             <p class="text-muted mb-2">Works at Microsoft</p>
@@ -339,7 +339,7 @@
                       </div>
                       <div class="col-md-6 col-lg-4">
                         <div class="friend-suggestion-card">
-                          <img src="/assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
+                          <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="friend-profile-img">
                           <div class="friend-info">
                             <h6>Lisa Anderson</h6>
                             <p class="text-muted mb-2">Works at Apple</p>
@@ -365,7 +365,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/assets/js/friends.js"></script>
+  <script src="../assets/js/friends.js"></script>
 </body>
 
 </html>
