--- a/Front-end/pages/login.html
+++ b/Front-end/pages/login.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link rel="icon" href="/assets/image/Luma-logo.jpeg" />
-    <link rel="stylesheet" href="/assets/css/auth.css">
-    <link rel="stylesheet" href="/assets/css/common.css">
+    <link rel="icon" href="../assets/image/Luma-logo.jpeg" />
+    <link rel="stylesheet" href="../assets/css/auth.css">
+    <link rel="stylesheet" href="../assets/css/common.css">
   </head>
   <body>
     <div class="auth-container">
       <div class="auth-card">
         <div class="auth-header">
-          <img src="/assets/image/Luma-logo.jpeg" alt="Luma Logo" class="auth-logo">
+          <img src="../assets/image/Luma-logo.jpeg" alt="Luma Logo" class="auth-logo">
           <h2>Welcome Back!</h2>
           <p>Sign in to continue to Luma</p>
         </div>
@@ -45,27 +45,29 @@
 
           <button type="submit" class="btn btn-primary w-100 mb-3">Sign In</button>
 
-<!--          <div class="divider">-->
-<!--            <span>or continue with</span>-->
-<!--          </div>-->
+          <div class="divider">
+            <span>or continue with</span>
+          </div>
 
-<!--          <div class="social-login">-->
-<!--            <button type="button" class="btn btn-outline-light social-btn">-->
-<!--              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/google/google-original.svg" alt="Google">-->
-<!--            </button>-->
-<!--            <button type="button" class="btn btn-outline-light social-btn">-->
-<!--              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/facebook/facebook-original.svg" alt="Facebook">-->
-<!--            </button>-->
-<!--            <button type="button" class="btn btn-outline-light social-btn">-->
-<!--              <i class="fab fa-apple"></i>-->
-<!--            </button>-->
-<!--          </div>-->
+          <div class="social-login">
+            <a href="http://localhost:8080/oauth2/authorization/google" class="text-decoration-none">
+              <button type="button" class="btn btn-outline-light social-btn">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/google/google-original.svg" alt="Google">
+              </button>
+            </a>
+            <button type="button" class="btn btn-outline-light social-btn">
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/facebook/facebook-original.svg" alt="Facebook">
+            </button>
+            <button type="button" class="btn btn-outline-light social-btn">
+              <i class="fab fa-apple"></i>
+            </button>
+          </div>
 
           <p class="text-center mt-4">
             Don't have an account? <a href="register.html">Sign up</a>
           </p>
           <p class="text-center mt-4">
-            Need an admin account? <a href="admin/register.html">Request access</a>
+            Need an admin account? <a href="admin/admin-access.html">Request access</a>
           </p>
         </form>
       </div>
@@ -75,6 +77,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/assets/js/auth.js"></script>
+    <script src="../assets/js/auth.js"></script>
   </body>
 </html>
