--- a/Front-end/pages/market.html
+++ b/Front-end/pages/market.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="icon" href="/assets/image/Luma-logo.jpeg">
-  <link rel="stylesheet" href="/assets/css/market.css">
-  <link rel="stylesheet" href="/assets/css/common.css">
+  <link rel="icon" href="../assets/image/Luma-logo.jpeg">
+  <link rel="stylesheet" href="../assets/css/market.css">
+  <link rel="stylesheet" href="../assets/css/common.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
-            <img src="/assets/image/Luma-logo.jpeg" alt="Luma Logo">
+            <img src="../assets/image/Luma-logo.jpeg" alt="Luma Logo">
           </a>
           <div class="search-container">
             <i class="bi bi-search search-icon"></i>
@@ -65,13 +65,13 @@
               </a>
             </div> -->
             <a class="nav-link profile-link" href="#" id="profileDropdown" data-bs-toggle="dropdown" title="Profile">
-              <img src="/assets/image/Profile-picture.png" alt="Profile" class="profile-img">
+              <img src="../assets/image/Profile-picture.png" alt="Profile" class="profile-img">
               <span id="profile-down-arrow"><i class="fa-solid fa-circle-chevron-down"></i></span>
             </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
               <a href="profile.html">
                 <div class="d-flex align-items-center px-3 py-2">
-                  <img src="/assets/image/Profile-picture.png" alt="Profile" class="rounded-circle me-2" width="40">
+                  <img src="../assets/image/Profile-picture.png" alt="Profile" class="rounded-circle me-2" width="40">
                   <div>
                     <h6 class="mb-0">Dilsara Thiranjaya</h6>
                   </div>
@@ -346,7 +346,7 @@
                     <div class="message-list">
                       <!-- Message Item -->
                       <div class="message-item unread">
-                        <img src="/assets/image/Test-profile-img.jpg" alt="User" class="message-sender">
+                        <img src="../assets/image/Test-profile-img.jpg" alt="User" class="message-sender">
                         <div class="message-content">
                           <h6>John Smith <span class="text-muted">- Regarding "Smart Watch"</span></h6>
                           <p class="message-preview">Is this still available? I can pick up today...</p>
@@ -512,7 +512,7 @@
                 <div class="mb-4">
                   <h6>Seller</h6>
                   <div class="d-flex align-items-center">
-                    <img src="/assets/image/Test-profile-img.jpg" alt="Seller" class="rounded-circle me-2" width="40"
+                    <img src="../assets/image/Test-profile-img.jpg" alt="Seller" class="rounded-circle me-2" width="40"
                       height="40">
                     <div>
                       <h6 class="mb-0">John Doe</h6>
@@ -539,7 +539,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/market.js"></script>
+    <script src="../assets/js/market.js"></script>
 </body>
 
 </html>
