--- a/Front-end/pages/messages.html
+++ b/Front-end/pages/messages.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" href="/assets/image/Luma-logo.jpeg">
-    <link rel="stylesheet" href="/assets/css/messages.css">
-    <link rel="stylesheet" href="/assets/css/common.css">
+    <link rel="icon" href="../assets/image/Luma-logo.jpeg">
+    <link rel="stylesheet" href="../assets/css/messages.css">
+    <link rel="stylesheet" href="../assets/css/common.css">
   </head>
   <body>
     <div id="app">
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
           <div class="container-fluid">
             <a class="navbar-brand" href="/">
-              <img src="/assets/image/Luma-logo.jpeg" alt="Luma Logo">
+              <img src="../assets/image/Luma-logo.jpeg" alt="Luma Logo">
             </a>
             <div class="search-container">
               <i class="bi bi-search search-icon"></i>
@@ -63,13 +63,13 @@
                 </a>
               </div> -->
               <a class="nav-link profile-link" href="#" id="profileDropdown" data-bs-toggle="dropdown" title="Profile">
-                <img src="/assets/image/Profile-picture.png" alt="Profile" class="profile-img">
+                <img src="../assets/image/Profile-picture.png" alt="Profile" class="profile-img">
                 <span id="profile-down-arrow"><i class="fa-solid fa-circle-chevron-down"></i></span>
               </a>
               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                 <a href="profile.html">
                   <div class="d-flex align-items-center px-3 py-2">
-                    <img src="/assets/image/Profile-picture.png" alt="Profile" class="rounded-circle me-2" width="40">
+                    <img src="../assets/image/Profile-picture.png" alt="Profile" class="rounded-circle me-2" width="40">
                     <div>
                       <h6 class="mb-0">Dilsara Thiranjaya</h6>
                     </div>
@@ -118,7 +118,7 @@
                       <div class="chat-item active">
                         <div class="d-flex align-items-center">
                           <div class="position-relative">
-                            <img src="/assets/image/Test-profile-img.jpg" alt="Profile" class="rounded-circle">
+                            <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="rounded-circle">
                             <span class="online-indicator"></span>
                           </div>
                           <div class="chat-info">
@@ -133,7 +133,7 @@
                       <div class="chat-item">
                         <div class="d-flex align-items-center">
                           <div class="position-relative">
-                            <img src="/assets/image/Test-profile-img.jpg" alt="Profile" class="rounded-circle">
+                            <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="rounded-circle">
                             <span class="online-indicator"></span>
                           </div>
                           <div class="chat-info">
@@ -149,7 +149,7 @@
                       <div class="chat-item">
                         <div class="d-flex align-items-center">
                           <div class="position-relative">
-                            <img src="/assets/image/Test-profile-img.jpg" alt="Profile" class="rounded-circle">
+                            <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="rounded-circle">
                           </div>
                           <div class="chat-info">
                             <h6 class="mb-0">Vihanga Heshan</h6>
@@ -174,7 +174,7 @@
                       <div class="chat-item">
                         <div class="d-flex align-items-center">
                           <div class="position-relative">
-                            <img src="/assets/image/Test-profile-img.jpg" alt="Group" class="rounded-circle">
+                            <img src="../assets/image/Test-profile-img.jpg" alt="Group" class="rounded-circle">
                             <span class="online-indicator"></span>
                           </div>
                           <div class="chat-info">
@@ -190,7 +190,7 @@
                       <div class="chat-item">
                         <div class="d-flex align-items-center">
                           <div class="position-relative">
-                            <img src="/assets/image/Test-profile-img.jpg" alt="Group" class="rounded-circle">
+                            <img src="../assets/image/Test-profile-img.jpg" alt="Group" class="rounded-circle">
                           </div>
                           <div class="chat-info">
                             <h6 class="mb-0">Design Squad</h6>
@@ -204,7 +204,7 @@
                       <div class="chat-item">
                         <div class="d-flex align-items-center">
                           <div class="position-relative">
-                            <img src="/assets/image/Test-profile-img.jpg" alt="Group" class="rounded-circle">
+                            <img src="../assets/image/Test-profile-img.jpg" alt="Group" class="rounded-circle">
                           </div>
                           <div class="chat-info">
                             <h6 class="mb-0">Project X</h6>
@@ -228,7 +228,7 @@
                 <div class="chat-header">
                   <div class="d-flex align-items-center">
                     <div class="position-relative">
-                      <img src="/assets/image/Test-profile-img.jpg" alt="Profile" class="rounded-circle">
+                      <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="rounded-circle">
                       <span class="online-indicator"></span>
                     </div>
                     <div class="chat-user-info">
@@ -329,6 +329,6 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/messages.js"></script>
+    <script src="../assets/js/messages.js"></script>
   </body>
 </html>
