--- a/Front-end/pages/register.html
+++ b/Front-end/pages/register.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link rel="icon" href="/assets/image/Luma-logo.jpeg" />
-    <link rel="stylesheet" href="/assets/css/auth.css">
-    <link rel="stylesheet" href="/assets/css/common.css">
+    <link rel="icon" href="../assets/image/Luma-logo.jpeg" />
+    <link rel="stylesheet" href="../assets/css/auth.css">
+    <link rel="stylesheet" href="../assets/css/common.css">
   </head>
   <body>
     <div class="auth-container">
       <div class="auth-card">
         <div class="auth-header">
-          <img src="/assets/image/Luma-logo.jpeg" alt="Luma Logo" class="auth-logo">
+          <img src="../assets/image/Luma-logo.jpeg" alt="Luma Logo" class="auth-logo">
           <h2>Create Account</h2>
           <p>Join the Luma community</p>
         </div>
@@ -96,6 +96,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/assets/js/auth.js"></script>
+    <script src="../assets/js/auth.js"></script>
   </body>
 </html>
