--- a/Front-end/pages/settings.html
+++ b/Front-end/pages/settings.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <link rel="icon" href="/assets/image/Luma-logo.jpeg" />
-    <link rel="stylesheet" href="/assets/css/auth.css">
-    <link rel="stylesheet" href="/assets/css/settings.css">
-    <link rel="stylesheet" href="/assets/css/common.css">
+    <link rel="icon" href="../assets/image/Luma-logo.jpeg" />
+    <link rel="stylesheet" href="../assets/css/auth.css">
+    <link rel="stylesheet" href="../assets/css/settings.css">
+    <link rel="stylesheet" href="../assets/css/common.css">
   </head>
   <body>
     <div id="app">
@@ -21,7 +21,7 @@
           <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="/">
-                <img src="/assets/image/Luma-logo.jpeg" alt="Luma Logo">
+                <img src="../assets/image/Luma-logo.jpeg" alt="Luma Logo">
               </a>
               <div class="search-container">
                 <i class="bi bi-search search-icon"></i>
@@ -65,13 +65,13 @@
                   </a>
                 </div> -->
                 <a class="nav-link profile-link active" href="#" id="profileDropdown" data-bs-toggle="dropdown" title="Profile">
-                  <img src="/assets/image/Profile-picture.png" alt="Profile" class="profile-img">
+                  <img src="../assets/image/Profile-picture.png" alt="Profile" class="profile-img">
                   <span id="profile-down-arrow"><i class="fa-solid fa-circle-chevron-down"></i></span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                   <a href="profile.html">
                     <div class="d-flex align-items-center px-3 py-2">
-                      <img src="/assets/image/Profile-picture.png" alt="Profile" class="rounded-circle me-2" width="40">
+                      <img src="../assets/image/Profile-picture.png" alt="Profile" class="rounded-circle me-2" width="40">
                       <div>
                         <h6 class="mb-0">Dilsara Thiranjaya</h6>
                       </div>
@@ -467,6 +467,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="/assets/js/settings.js"></script>
+    <script src="../assets/js/settings.js"></script>
   </body>
 </html>
