--- a/Front-end/pages/login.html
+++ b/Front-end/pages/login.html
@@ -59,7 +59,7 @@
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/facebook/facebook-original.svg" alt="Facebook">
             </button>
             <button type="button" class="btn btn-outline-light social-btn">
-              <i class="fab fa-apple"></i>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="Github">
             </button>
           </div>
 
