Timeline Controller created.

--- a/Front-end/pages/profile.html
+++ b/Front-end/pages/profile.html
@@ -190,7 +190,7 @@
                                     <h1 id="profileName">Name</h1>
                                     <div class="profile-stats">
                                         <div class="stat-item">
-                                            <span class="stat-number">245</span>
+                                            <span id="postCount" class="stat-number"></span>
                                             <span class="stat-label">Posts</span>
                                         </div>
                                         <div class="stat-item">
