--- a/Front-end/pages/timeline.html
+++ b/Front-end/pages/timeline.html
@@ -122,14 +122,14 @@
                             </div>
                         </a>
                         <hr class="my-1"/>
-                        <a class="dropdown-item" href="admin/dashboard.html">
+                        <a id="adminButton" class="dropdown-item" href="admin/dashboard.html">
                             <i class="fa-solid fa-user-tie me-2"></i></i> Administration
                         </a>
                         <hr class="my-1"/>
                         <a class="dropdown-item" href="settings.html">
                             <i class="bi bi-gear-fill me-2"></i> Settings & Privacy
                         </a>
-                        <a class="dropdown-item text-danger" href="login.html">
+                        <a id="logoutButton" class="dropdown-item text-danger" href="login.html">
                             <i class="bi bi-box-arrow-right me-2"></i> Logout
                         </a>
                     </div>
@@ -154,8 +154,8 @@
                                 />
                             </div>
                             <h5 class="mt-5 mb-3" id="sideBarProfileName">Name</h5>
-                            <p class="text-muted text-start">
-                                <i class="fa-solid fa-location-dot me-1" id="sideBarLocationIcon"></i>
+                            <p class="text-muted text-start sidebar-location-item">
+                                <i class="fa-solid fa-location-dot me-1" id="sideBarLocation"></i>
                                 From Galle, Sri Lanka
                             </p>
                             <p class="text-muted text-start" id="sideBarJoinedDate">
@@ -199,22 +199,24 @@
                                     </div>
                                 </div>
                                 <div class="post-actions mt-3">
-                                    <button class="btn btn-light" data-action="upload">
+                                    <button id="addPhotos" class="btn btn-light">
                                         <i class="bi bi-image text-primary"></i> Photo
                                     </button>
-                                    <button class="btn btn-light">
+                                    <button id="addVideos" class="btn btn-light">
                                         <i class="bi bi-camera-video text-success"></i> Video
                                     </button>
-<!--                                    <button class="btn btn-light">-->
-<!--                                        <i class="bi bi-calendar-event text-warning"></i> Event-->
-<!--                                    </button>-->
+                                    <!--                                                    <button class="btn btn-light"-->
+                                    <!--                                                            data-bs-toggle="modal"-->
+                                    <!--                                                            data-bs-target="#eventModal">-->
+                                    <!--                                                        <i class="bi bi-calendar-event text-warning"></i> Event-->
+                                    <!--                                                    </button>-->
                                 </div>
                             </div>
                         </div>
                     </div>
 
                     <!-- Timeline Posts -->
-                    <div class="timeline-posts">
+                    <div class="posts-container">
                         <!-- Post Item -->
                     </div>
                 </div>
